Had scroll issues in Webkit, forcing overflow hidden and getScrollSize -- just in case

--- a/web/css/SqueezeBox/SqueezeBox.css
+++ b/web/css/SqueezeBox/SqueezeBox.css
@@ -42,6 +42,7 @@
 	background-color: #fff;
 	height: 100%;
 	width: 100%;
+	overflow: hidden;
 }
 
 .sbox-content-image#sbox-content {
